# ai-eculution

./: .gitignore  CHAQUOPY_WINDOWS_WEG.md  README.md  RELEASE_CHECKLIST.md  apk_builder.py  apk_builder_config.json  build.py  buildozer.spec  requirements.txt  text.md
.github/workflows/: build-apk-beeware.yml  build-apk-chaquopy.yml
android-chaquopy/: README_BUILD.md  build.gradle  settings.gradle
android-chaquopy/app/: build.gradle
android-chaquopy/app/src/main/: AndroidManifest.xml
android-chaquopy/app/src/main/java/com/example/apkbuilder/: A4CanvasLayout.kt  MainActivity.kt
android-chaquopy/app/src/main/java/com/thilo/evocreatureai/: AndroidBridge.kt  CreatureView.kt  MainActivity.kt
android-chaquopy/app/src/main/python/: ai_leanr_walk.py  ai_lern_walk_android.py  ai_lern_walk_android_spezial.py  android_bridge.py  app_logic.py  app_logic_build.py  bridge.py  game_core.py  storage_manager_android.py
android-chaquopy/app/src/main/res/layout/: activity_main.xml
android-chaquopy/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
beeware-app/: README.md  pyproject.toml
beeware-app/src/evocreatureai/: app.py  app_logic.py
repo_clean/: .gitignore  APK_WEITER_NACH_NEUSTART.md  apk_builder.py  requirements.txt
repo_clean/android-chaquopy/app/: build.gradle  proguard-rules.pro
repo_clean/android-chaquopy/app/src/main/python/: ai_leanr_walk.py
repo_clean/saved_creatures/: Starter.json
