[build-system]
requires = ["briefcase"]
build-backend = "briefcase"

[tool.briefcase]
project_name = "Evo Creature AI"
bundle = "com.thilo"
version = "0.1.0"
url = "https://github.com/Gamer20339939k/ai-eculution"
license.file = "LICENSE"
author = "Thilo"
author_email = "thilo@example.com"

[tool.briefcase.app.evocreatureai]
formal_name = "Evo Creature AI"
description = "Learn-Walk Simulation (BeeWare)"
long_description = "Learn-Walk Simulation (BeeWare Android App)"
sources = ["src/evocreatureai"]
requires = ["toga>=0.4.8"]
